<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.camera.CameraActivity">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="56dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/mp_left_bg"
        android:elevation="4dp"
        android:layout_marginVertical="12dp"
        android:src="@drawable/mp_ic_back"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/mp_add_image"
        tools:ignore="UnusedAttribute" />

    <ImageButton
        android:id="@+id/ibDone"
        android:layout_width="56dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/mp_right_bg"
        android:contentDescription="@string/mp_app_name"
        android:elevation="4dp"
        android:layout_marginVertical="12dp"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/mp_ic_done"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UnusedAttribute" />

    <ToggleButton
        android:id="@+id/tbVideo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textOn="@string/mp_video_on"
        android:textOff="@string/mp_video_off"
        android:textColor="@color/mp_blue"
        android:textStyle="bold"
        android:background="@drawable/mp_white_bg"
        android:backgroundTint="@color/mp_accent"
        android:paddingHorizontal="20dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/ibBack"
        app:layout_constraintBottom_toBottomOf="@id/ibBack"
        app:layout_constraintStart_toEndOf="@id/ibBack"
        app:layout_constraintEnd_toStartOf="@id/ibDone"/>

    <TextView
        android:id="@+id/tvCounter"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="@color/mp_white"
        android:elevation="8dp"
        android:background="@drawable/mp_ic_capture"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/ibDone"
        app:layout_constraintEnd_toEndOf="@id/ibDone"
        tools:text="5"
        tools:visibility="visible"/>

    <SeekBar
        android:id="@+id/seekBarZoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:elevation="8dp"
        android:max="100"
        android:maxHeight="8dp"
        android:minHeight="8dp"
        android:progressDrawable="@drawable/mp_seek_bar"
        android:thumb="@drawable/mp_custom_thumb"
        app:layout_constraintBottom_toTopOf="@+id/rlButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/rlButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/rlButtons"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/switchCameraIv"
            android:layout_width="44dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:background="@drawable/mp_left_bg"
            android:contentDescription="@string/mp_app_name"
            android:elevation="8dp"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/mp_ic_switch_camera"
            tools:ignore="UnusedAttribute" />

        <ImageView
            android:id="@+id/fabCapture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/mp_app_name"
            android:src="@drawable/mp_ic_capture" />

        <ImageView
            android:id="@+id/flashIv"
            android:layout_width="44dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/mp_right_bg"
            android:contentDescription="@string/mp_app_name"
            android:elevation="8dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingVertical="2dp"
            android:src="@drawable/mp_ic_flash_off_blue"
            tools:ignore="UnusedAttribute" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>